unpackaged/main/default/objects/joinapi__Step__c/joinapi__Step__c.object-meta.xml
<CustomObject>
    <description>The configuration of what is presented to the customer during the join process.</description>
    <label>Step</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>