unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Disable_Item_Navigation_URL__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Disable_Item_Navigation_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the item links on the marketing page.</description>
    <inlineHelpText>Disables the item links on the marketing page.</inlineHelpText>
    <label>Disable Item Navigation URL</label>
    <type>Checkbox</type>
</CustomField>