unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Dynamic_Item_Selection__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Dynamic_Item_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the step to be dynamic item selection.</description>
    <inlineHelpText>Defines the step to be dynamic item selection.</inlineHelpText>
    <label>Dynamic Item Selection</label>
    <type>Checkbox</type>
</CustomField>