unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Enable_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Enable_Account_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field will allow the end user to search for organizations (Accounts) to relate their contact.</description>
    <inlineHelpText>Checking this field will allow the end user to search for organizations (Accounts) to relate their contact.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>