unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Form__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated when using a qualifying question step.</description>
    <inlineHelpText>Populated when using a qualifying question step.</inlineHelpText>
    <label>Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipName>Join_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>