unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Instructions__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Instructions__c</fullName>
    <description>The value in this field will be presented under the title at the top of the page.</description>
    <inlineHelpText>The value in this field will be presented under the title at the top of the page.</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>