unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Is_Confirmation_Step__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Confirmation_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the step to be a confirmation step.</description>
    <inlineHelpText>Defines the step to be a confirmation step.</inlineHelpText>
    <label>Is Confirmation Step</label>
    <type>Checkbox</type>
</CustomField>