unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Is_Custom_Page__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Custom_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the step to be a custom page.</description>
    <inlineHelpText>Defines the step to be a custom page.</inlineHelpText>
    <label>Is Custom Page</label>
    <type>Checkbox</type>
</CustomField>