unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Is_Final_Step__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Final_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked indicates this is the final step in the Join Process</description>
    <inlineHelpText>When checked indicates this is the final step in the Join Process</inlineHelpText>
    <label>Is Final Step</label>
    <type>Checkbox</type>
</CustomField>