unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Is_Marketing_Step__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Marketing_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the step to be a marketing step.</description>
    <inlineHelpText>Defines the step to be a marketing step.</inlineHelpText>
    <label>Is Marketing Step</label>
    <type>Checkbox</type>
</CustomField>