unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Is_Product_Step__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Product_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the step to be a item flow step.</description>
    <inlineHelpText>Defines the step to be a item flow step.</inlineHelpText>
    <label>Is Product Step</label>
    <type>Checkbox</type>
</CustomField>