unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Is_Qualifying_Question__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Qualifying_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the step to be a qualifying question step.</description>
    <inlineHelpText>Defines the step to be a qualifying question step.</inlineHelpText>
    <label>Is Qualifying Question</label>
    <type>Checkbox</type>
</CustomField>