unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Join_Process__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Join_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the join process step to the join process.</description>
    <inlineHelpText>Relates the join process step to the join process.</inlineHelpText>
    <label>Join Process</label>
    <referenceTo>joinapi__Join_Process__c</referenceTo>
    <relationshipName>Join_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>