unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Login_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Login_Button_Label__c</fullName>
    <defaultValue>&#39;Login&#39;</defaultValue>
    <description>Defines the button label for the login section of the authentication page.</description>
    <inlineHelpText>Defines the button label for the login section of the authentication page.</inlineHelpText>
    <label>Login Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>