unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Login_Header__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Login_Header__c</fullName>
    <defaultValue>&#39;Login&#39;</defaultValue>
    <description>Appears as the header for the login section of the authentication page.</description>
    <inlineHelpText>Appears as the header for the login section of the authentication page.</inlineHelpText>
    <label>Login Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>