unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Login_Instructions__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Login_Instructions__c</fullName>
    <description>Instructions to be presented to the end user for finding their contact record.</description>
    <inlineHelpText>Instructions to be presented to the end user for finding their contact record.</inlineHelpText>
    <label>Login Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>