unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Navigation_URL__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Navigation_URL__c</fullName>
    <description>Defines the navigation url as a result of clicking the action button.</description>
    <inlineHelpText>Defines the navigation url as a result of clicking the action button.</inlineHelpText>
    <label>Navigation URL</label>
    <type>Url</type>
</CustomField>