unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__New_User_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>joinapi__New_User_Button_Label__c</fullName>
    <defaultValue>&#39;Create Login&#39;</defaultValue>
    <description>Defines the button label for the new user section of the authentication page.</description>
    <inlineHelpText>Defines the button label for the new user section of the authentication page.</inlineHelpText>
    <label>New User Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>