unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__New_User_Header__c.field-meta.xml
<CustomField>
    <fullName>joinapi__New_User_Header__c</fullName>
    <defaultValue>&#39;Create Account&#39;</defaultValue>
    <description>Appears as the header for the new user section of the authentication page.</description>
    <inlineHelpText>Appears as the header for the new user section of the authentication page.</inlineHelpText>
    <label>New User Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>