unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__New_User_Instructions__c.field-meta.xml
<CustomField>
    <fullName>joinapi__New_User_Instructions__c</fullName>
    <description>Instructions to be presented to the end user for creating a new user.</description>
    <inlineHelpText>Instructions to be presented to the end user for creating a new user.</inlineHelpText>
    <label>New User Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>