unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Next_Step__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Next_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the step that is redirected after the current step is submitted</description>
    <inlineHelpText>This is the step that is redirected after the current step is submitted</inlineHelpText>
    <label>Next Step</label>
    <referenceTo>joinapi__Step__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>