unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Next_Step_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Next_Step_Button_Label__c</fullName>
    <defaultValue>&#39;Next Step&#39;</defaultValue>
    <description>Defines the button label for the next step on every step.</description>
    <inlineHelpText>Defines the button label for the next step on every step.</inlineHelpText>
    <label>Next Step Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>