unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Page_Title__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Page_Title__c</fullName>
    <description>Defines the page title text that is displayed at the top of the page.</description>
    <inlineHelpText>Defines the page title text that is displayed at the top of the page.</inlineHelpText>
    <label>Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>