unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Product_Step_Item__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Product_Step_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for product flow steps, this field defines the item for the item flow.</description>
    <inlineHelpText>Used for product flow steps, this field defines the item for the item flow.</inlineHelpText>
    <label>Product Step Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipName>Join_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>