unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Specific_Item_Selection__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Specific_Item_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the step to be a specific item selection.</description>
    <inlineHelpText>Defines the step to be a specific item selection.</inlineHelpText>
    <label>Specific Item Selection</label>
    <type>Checkbox</type>
</CustomField>