unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Store__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the store that controls the authentication and payment rules used for this page.</description>
    <inlineHelpText>Defines the store that controls the authentication and payment rules used for this page.</inlineHelpText>
    <label>Store</label>
    <referenceTo>OrderApi__Store__c</referenceTo>
    <relationshipName>Join_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>