unpackaged/main/default/objects/joinapi__Step__c/fields/joinapi__Visual_Force_Page_API_Name__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Visual_Force_Page_API_Name__c</fullName>
    <description>Define the VF page to be used for this step.</description>
    <inlineHelpText>Define the VF page to be used for this step.</inlineHelpText>
    <label>Visual Force Page API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>