unpackaged/main/default/objects/joinapi__Step__c/listViews/joinapi__All.listView-meta.xml
<ListView>
    <fullName>joinapi__All</fullName>
    <columns>NAME</columns>
    <columns>joinapi__Page_Title__c</columns>
    <columns>joinapi__Join_Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>